@@ -418,6 +418,7 @@ void sj_extractor_extract_track (SjExtractor *extractor, const TrackDetails *tra
                             GST_TAG_ALBUM, track->album->title,
                             GST_TAG_MUSICBRAINZ_ALBUMID, track->album->album_id,
                             GST_TAG_MUSICBRAINZ_ALBUMARTISTID, track->album->artist_id,
+                            GST_TAG_MUSICBRAINZ_ARTISTID, track->artist_id,
                             GST_TAG_MUSICBRAINZ_TRACKID, track->track_id,
                             GST_TAG_ENCODER, _("Sound Juicer"),
                             GST_TAG_ENCODER_VERSION, VERSION,
