@@ -34,6 +34,7 @@ void track_details_free(TrackDetails *track)
   g_free (track->title);
   g_free (track->artist);
   g_free (track->track_id);
+  g_free (track->artist_id);
   g_free (track);
 }
 
