@@ -1,5 +1,13 @@
 2005-05-20  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-structures.[ch]:
+	* src/sj-metadata-musicbrainz.c:
+	* src/sj-extractor.c:
+	* src/sj-prefs.c:
+	Add track artist ID.
+
+2005-05-20  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	Depend on gstreamer-plugins-dev 0.8.8 and nautilus-burn 2.11.1
 
